<resources>
    <string name="app_name">Appliction-Manic-Time</string>
    <string name="Email">Your Email</string>
    <string name="Password">Your Password</string>
    <string name="Login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="Name">Your Name</string>
    <string name="ConfirmPassword">Confirm Your Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MANICTIME</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_tmsystem">TM System</string>
    <string name="menu_Stime">Smart Time</string>
    <string name="menu_Analytics">Analytics</string>
    <string name="menu_AppLimit">App limit</string>
    <string name="menu_options">Options</string>
    <string name="menu_close">Close</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_dashboard">menu_dashboard\n</string>
</resources>