<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/dashbaord">

    <!-- Fragment pour la page d'accueil -->
    <fragment
        android:id="@+id/options"
        android:name="com.example.navigationdrawer.ui.home.options"
        android:label="@string/menu_options"
        tools:layout="@layout/fragment_home" />

    <!-- Fragment pour la page de slideshow -->
    <fragment
        android:id="@+id/applimit"
        android:name="com.example.navigationdrawer.ui.home.applimit"
        android:label="@string/menu_AppLimit"
        tools:layout="@layout/fragment_slideshow" />

    <!-- Fragment pour les statistiques ou l'analyse -->
    <fragment
        android:id="@+id/analytics"
        android:name="com.example.navigationdrawer.ui.home.analytics"
        android:label="@string/menu_Analytics"
        tools:layout="@layout/fragment_slideshow" />

    <!-- Fragment pour le tableau de bord -->
    <fragment
        android:id="@+id/dashbaord"
        android:name="com.example.navigationdrawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_gallery" />

    <!-- Fragment pour le système TM -->
    <fragment
        android:id="@+id/tmsystem"
        android:name="com.example.navigationdrawer.ui.home.TmSystemFragment"
        android:label="@string/menu_tmsystem"
        tools:layout="@layout/fragment_tm_system" />

    <!-- Fragment pour la gestion du temps (par exemple) -->
    <fragment
        android:id="@+id/stime"
        android:name="com.example.navigationdrawer.ui.home.stime"
        android:label="@string/menu_Stime"
        tools:layout="@layout/fragment_slideshow" />
</navigation>
